web/css/components/chat.css
/* =======================================================================================
LIVE CHAT
=======================================================================================================*/
.conversation-section-list a {
  text-decoration: underline;
  font-weight: 600;
}

.conversation-section-item .avatar-thumb {
  height: 36px;
}

.operator-connected-list .thumb-sm {
  text-align: center;
}

.js-main-container i {
  font-weight: bold !important;
}

.conversations {
  z-index: 3;
}

.conversations.show-conversation-list {
  padding-left: 275px;
}

.conversations .avatar {
  float: left;
}

.live-nav.active a {
  background: #528DC3 !important;
  color: #f2f2f2 !important;
}

.aside-chat-left {
  width: 275px;
  position: absolute;
  z-index: 4;
  border-radius: 3px 0 0 3px;
}

.aside-chat-right {
  width: 50px;
  border-radius: 3px 3px 0 0;
  overflow-x: hidden;
  overflow-y: auto;
}

.chat-header {
  background: #6075a4;
}

.chat-message-show{
  -webkit-animation: showFromBottom .3s ease both;
  -moz-animation: showFromBottom .3s ease both;
  animation: showFromBottom .3s ease both;
}

.conversation-header {
  background: #eaecf0;
}

.header-control {
  display: inline-block;
  padding: 10px 0;
}

.header-control a i {
  font-size: 20px;
  color: #f9f9f9;
  line-height: 30px;
}

.header-control button {
  background: #565f71;
  box-shadow: 3px 3px 1px -2px #454d5f;
  outline: none;
  color: #f9f9f9;
  font-size: 12px;
  margin-right: 5px;
}

.header-control button:hover, .header-control button:focus {
  color: white;
}

.dropdown-menu li.active a {
  background: transparent !important;
}

.dropdown-menu li.active a:hover {
  background: #f3f5f9 !important;
}

.header .dropdown-menu {
  margin-top: 5px;
  min-width: 125px;
  right: 4px;
  left: auto;
}

.windows .dropdown-menu a, .status .dropdown-menu a {
  color: #999999;
}

.windows .dropdown-menu a:hover, .status .dropdown-menu a:hover {
  background: #f3f5f9;
  color: #999999;
}

.status {
  width: 11px;
  height: 11px;
  display: inline-block;
}

.status:before {
  margin: 0;
}

.status-button .icon-stop {
  font-size: 11px;
  margin-right: 3px;
}

.status-button .available {
  color: #31bf7a;
}

.status-button .unavailable {
  color: #ff6455;
}

.header-current, .header-waiting {
  border-bottom: 1px solid #d1d1d1;
  height: 40px;
  padding: 0 10px 0 15px;
  cursor: pointer;
}

.header-current span, .header-waiting span {
  margin-top: 10px;
  background: #e7e9ed;
  color: #7e7f84;
}

.header-current {
  border-top: 1px solid #d1d1d1;
}

.header-queue {
  height: 50px;
  padding: 0px 10px 0 15px;
  position: relative;
}

.header-queue h5 {
  margin: 0;
  padding-top: 17px;
  font-size: 12px;
}

.windows-selector {
  position: absolute;
  right: 10px;
  top: 10px;
}

.windows-selector .dropdown-menu {
  left: -23px;
  min-width: 68px;
}

.windows-selector .btn {
  background: transparent;
  border: solid 1px rgba(206, 206, 206, 0.65);
  color: #8C8C8C;
}

.header-waiting {
  border-top: 1px solid #d1d1d1;
}

.header-current h5, .header-waiting h5 {
  font-size: 10px;
  font-weight: 900;
  color: #67686b;
  margin: 0;
  line-height: 40px;
  display: inline-block;
}

.header-current > i {
  font-size: 20px;
  color: #67686b;
  line-height: 38px;
  cursor: pointer;
}

.header-waiting > i {
  font-size: 20px;
  color: #67686b;
  line-height: 38px;
  cursor: pointer;
}

.list-current, .list-waiting {
  padding: 0;
  margin: 0;
}

.list-record-item {
  position: relative;
  border-bottom: 1px solid #f1f0f0;
  height: 55px;
  width: 100%;
  cursor: pointer;
}

.list-record-item:hover {
  background: #eff1f4;
}

.list-record-item.active {
  background: #F3F5F9;
  box-shadow: -9px 0px 20px -12px rgba(179, 179, 179, 0.75) inset;
}

.list-record-item:last-child {
  border-bottom: none;
}

.list-record-item .status-full {
  position: absolute;
  left: 10px;
  top: 10px;
  height: 30px;
  width: 10px;
}

.list-record-item .status-half-first {
  position: absolute;
  left: 10px;
  top: 10px;
  height: 15px;
  width: 10px;
}

.list-record-item .status-half-last {
  position: absolute;
  left: 10px;
  top: 27px;
  height: 15px;
  width: 10px;
}

.answered {
  background: #31bf7a;
  color: #31bf7a;
}

.text-answered {
  color: #31bf7a;
}

.unanswered {
  background: #f8ca12;
  color: #f8ca12;
}

.urgent {
  background: #e74c3c !important;
  color: #e75c3c;
}

.text-urgent {
  color: #e74c3c !important;
}

.text-unanswered {
  color: #f8ca12;
}

.sell-opportunity {
  background: #6075a4;
}

.multiple {
  margin: 20px;
  display: inline-block;
  background: #f9fafb;
}

.multiple.selected {
  -moz-box-shadow:    0px 0px 30px 0px #D5D5D5;
  -webkit-box-shadow: 0px 0px 30px 0px #D5D5D5;
  box-shadow:         0px 0px 30px 0px #D5D5D5;
}

.half-width {
  max-width: -moz-calc(50% - 40px);
  max-width: -webkit-calc(50% - 40px);
  max-width: -o-calc(50% - 40px);
  max-width: calc(50% - 40px);
  height: calc(100% - 40px);
  height: -moz-calc(100% - 40px);
  height: -webkit-calc(100% - 40px);
  height: -o-calc(100% - 40px);
}

.half-height {
  max-height: -moz-calc(50% - 40px);
  max-height: -webkit-calc(50% - 40px);
  max-height: -o-calc(50% - 40px);
  max-height: calc(50% - 40px);
}

.full-width {
  max-width: -moz-calc(100% - 40px);
  max-width: -webkit-calc(100% - 40px);
  max-width: -o-calc(100% - 40px);
  max-width: calc(100% - 40px);
}

.modal-content {
  border-radius: 3px;
}

.modal-footer {
  border-top: none;
  padding: 15px;
  margin-top: 0 !important;
}

.modal-title {
  font-size: 14px;
}

.modal-transfer, .modal-close, .modal-ban, .modal-unavailable {
  margin: 0;
  position: fixed;
  width: 500px;
  top: calc(50% - 100px) !important;
  left: calc(50% - 250px) !important;
  z-index: 9999;
  outline: 0;
}

.modal-connection-lost {
  margin: 0;
  position: absolute;
  width: 500px;
  height: 400px;
  top: calc(50% - 50px) !important;
  left: calc(50% - 250px) !important;
  z-index: 9999;
  opacity: 1;
}

.modal-transfer .list-group-item {
  cursor: pointer;
}

.modal-backdrop.in {
  cursor: pointer;
}

.modal-close-button {
  position: absolute;
  right: 10px;
  top: 10px;
  -webkit-appearance: none;
  border: none;
  background: transparent;
  color: #fff;
  opacity: 1;
  font-size: 20px;
  z-index: 10002;
}

.list-record-item .informations {
  display: inline-block;
  margin-top: 10px;
  margin-left: 30px;
  width: 150px;
  height: 35px;
  border-right: 1px solid #efefef;
}

.list-record-item .informations p {
  margin: 0;
  color: #787878;
  font-size: 12px;
  overflow: hidden;
  -o-text-overflow: ellipsis; /* pour Opera 9 */
  text-overflow: ellipsis;
  width: 100%;
  white-space: nowrap;
}

.list-record-item .informations label {
  color: #787878;
  font-size: 10px;
  margin: 0 0 0 -2px;
  position: relative;
  top: -4px;
}

.list-record-item .informations icon {
  font-size: 12px;
  margin-right: 3px;
}

.list-record-item .timer-lastmsg {
  color: #999999;
  display: inline-block;
  font-size: 14px;
  width: 90px;
  text-align: center;
  vertical-align: 35%;
}

.aside-chat-left {
  background: #f9fafc;
}

.conversation-header p {
  margin-left: 5px;
  width: 100%;
  max-width: -moz-calc(100% - 250px);
  max-width: -webkit-calc(100% - 250px);
  max-width: -o-calc(100% - 250px);
  max-width: calc(100% - 250px);
}

.conversation-header-control {
  color: #6e7d83;
  font-size: 12px;
  font-weight: 600;
}

.conversation-close {
  color: #6e7d83;
  font-size: 18px;
  float: right;
  margin: 13px 0 0 2px;
  cursor: pointer;
}

.conversation-minus {
  color: #6e7d83;
  font-size: 18px;
  float: right;
  margin: 18px 0 0 15px;
  cursor: pointer;
}

.conversation-close:hover, .ban:hover, .transfer:hover {
  color: #576064;
}

.conversation-header-control .transfer, .ban {
  cursor: pointer;
}

.conversation-footer  {
  padding: 0 20px;
}

.conversation-footer .alert-writing {
  position: absolute;
  top: -25px;
  right: 25px;
  font-size: 12px;
}

.conversation-footer textarea {
  width: 100%;
  height: 85px;
  resize: none;
}

.conversation-section {
  padding: 20px;
  margin-bottom: 180px;
}

.conversation-section-list {
  padding: 0;
}

.conversation-section-list li {
  display: block;
}

.conversation-section-item img.img-circle {
  width: 35px;
  height: 35px;
  margin-left: 5px;
  float: left;
}

.conversation-section-item p.msg-visitor {
  padding-right: 15px;
  text-align: right;
  font-size: 12px;
  font-weight: 600;
  color: #6075a4;
  border-right: 2px solid #6075a4;
  min-height: 35px;
  word-wrap: break-word;
}

.conversation-section-item p.msg-visitor .date {
  color: #d6d6d6;
  font-weight: 300;
}

.conversation-section-item p.msg-operator {
  border-left: 2px solid #6e7d83;
  font-size: 12px;
  min-height: 35px;
  padding-left: 15px;
}

.msg-with-avatar {
  margin-left: 30px;
  border-left: 0 !important;
}

.conversation-section-item p span {
  color: #d6d6d6;
  display: block;
}

.conversation-section p.msg-server {
  border-bottom: 1px dotted #a9abb1;
  padding-bottom: 8px;
  margin-bottom: 20px;
  color: #a9abb1;
}

.informations-header {
  background: #f9fafc;
  -webkit-touch-callout: none;
  -webkit-user-select: none;
  -khtml-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.informations-header h5 {
  margin: 0;
  padding: 18px 0 18px 0;
  font-size: 13px;
  display: inline-block;
}

.informations-header icon {
  padding: 15px 0 15px 0;
  font-size: 20px;
  cursor: pointer;
}

.informations-section {
  padding: 20px 10px;
}

.informations-section p {
  overflow: hidden;
  -o-text-overflow: ellipsis; /* pour Opera 9 */
  text-overflow: ellipsis;
}

.name-form-control {
  border: none;
  outline: none;
  background: transparent;
  color: #6e7d83;
  font-weight: 600;
  overflow: hidden;
  -o-text-overflow: ellipsis; /* pour Opera 9 */
  text-overflow: ellipsis;
  width: 100%;
}

.informations-form-control {
  border: none;
  outline: none;
  color: #787878;
}

.informations-form-control:focus {
  border-bottom: 1px solid #579ad7;
}

.informations-list {
  list-style-type: none;
  padding-left: 5px;
}

.informations-item a {
  max-width: 100%;
  display: inline-block;
  text-overflow: ellipsis;
  overflow-x: hidden;
}

.informations-item a:hover {
  text-decoration: underline;
}

.icon-gear.active, .icon-bar-chart.active, .icon-comments-alt.active {
  color: #fcc44d;
}

.header-control i.disable {
  cursor: default;
}

/* Need to specify with all the way down to the textarea 
 * for wywihtml5 to set the proper width */
.conversation-form, 
.conversation-form .panel,
.conversation-form .panel form,
.conversation-form .panel form textarea {
  width: 100%;
}

.wysihtml5-toolbar {
  margin-right: 5px;
  width: 100%;
  max-width: 700px;
  display: inline-block;
}

.wysihtml5-toolbar a {
  display: inline-block;
}

.wysihtml5-sandbox {
  width: 100%;
  max-width: 100%;
}

.createLink {
  position: absolute;
  bottom: 31px;
  margin-right: 70px;
}

.dropdown-select .disabled {
  color: #cbcbcb;
}

.transfer-validation {
  text-align: right;
}

.validate-title {
  line-height: 30px;
}

@media (max-width: 767px) {

  .aside-chat-left {
    width: 100%;
  }

  .list-record-item .informations {
    width: 100%;
    max-width: -moz-calc(100% - 130px);
    max-width: -webkit-calc(100% - 130px);
    max-width: -o-calc(100% - 130px);
    max-width: calc(100% - 130px);
  }

  .modal-close, .modal-ban, .modal-transfer {
    margin: 0;
    position: absolute;
    width: 100%;
    height: 100%;
    top: 0 !important;
    left: 0 !important;
    z-index: 9999;
  }

  body.modal-open, .modal-open .navbar-fixed-top, .modal-open .navbar-fixed-bottom {
    margin-right: 0;
  }

  .modal-content {
    height: 100%;
    border: 0;
    border-radius: 0;
  }

  .modal-footer {
    position: absolute;
    bottom: 0;
  }

}

